# HALc

./: Cargo.toml  README.md  agent.toml  context.md
Heuristic Agent Ledger by confrontation/: Heuristic Agent Ledger by confrontation.md  HeuristicAgentLedgerbyconfrontation.html
src/: agent.rs  algorithm.rs  config.rs  context.rs  error.rs  lib.rs  main.rs  markdown.rs  openai.rs  prompts.rs  scoring.rs  server.rs
tests/: integration_tests.rs  unit_tests.rs
